// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changeUsername should change username 1`] = `
Object {
  "identity": Object {
    "identity": Object {
      "data": Array [
        Object {
          "address": null,
          "birthDate": null,
          "created": 2020-01-01T07:00:00.000Z,
          "displayName": null,
          "events": Array [
            Object {
              "date": 2020-01-01T07:00:00.000Z,
              "name": "identity_created",
              "payload": Object {
                "address": null,
                "birthDate": null,
                "displayName": null,
                "familyName": null,
                "gender": null,
                "givenName": null,
                "gravatar": null,
                "locale": null,
                "middleName": null,
                "nickname": null,
                "phoneNumber": null,
                "phoneNumberVerified": false,
                "picture": null,
                "preferredUsername": null,
                "profile": null,
                "username": null,
                "website": null,
                "zoneInfo": null,
              },
            },
            Object {
              "date": 2020-01-01T07:00:00.000Z,
              "name": "identity_username_changed",
              "payload": Object {
                "username": null,
              },
            },
          ],
          "familyName": null,
          "gender": null,
          "givenName": null,
          "gravatar": null,
          "id": "fd4e3548-1279-4065-9671-74c3bbea0c25",
          "locale": null,
          "middleName": null,
          "nickname": null,
          "phoneNumber": null,
          "phoneNumberVerified": false,
          "picture": null,
          "preferredUsername": null,
          "profile": null,
          "updated": 2020-01-01T07:00:00.000Z,
          "username": "username",
          "version": 1,
          "website": null,
          "zoneInfo": null,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;

exports[`changeUsername should throw error if the username exists 1`] = `
Object {
  "identity": Object {
    "identity": Object {
      "data": Array [
        Object {
          "address": null,
          "birthDate": null,
          "created": 2020-01-01T07:00:00.000Z,
          "displayName": null,
          "events": Array [
            Object {
              "date": 2020-01-01T07:00:00.000Z,
              "name": "identity_created",
              "payload": Object {
                "address": null,
                "birthDate": null,
                "displayName": null,
                "familyName": null,
                "gender": null,
                "givenName": null,
                "gravatar": null,
                "locale": null,
                "middleName": null,
                "nickname": null,
                "phoneNumber": null,
                "phoneNumberVerified": false,
                "picture": null,
                "preferredUsername": null,
                "profile": null,
                "username": null,
                "website": null,
                "zoneInfo": null,
              },
            },
            Object {
              "date": 2020-01-01T07:00:00.000Z,
              "name": "identity_username_changed",
              "payload": Object {
                "username": null,
              },
            },
          ],
          "familyName": null,
          "gender": null,
          "givenName": null,
          "gravatar": null,
          "id": "fd4e3548-1279-4065-9671-74c3bbea0c25",
          "locale": null,
          "middleName": null,
          "nickname": null,
          "phoneNumber": null,
          "phoneNumberVerified": false,
          "picture": null,
          "preferredUsername": null,
          "profile": null,
          "updated": 2020-01-01T07:00:00.000Z,
          "username": null,
          "version": 0,
          "website": null,
          "zoneInfo": null,
        },
        Object {
          "address": null,
          "birthDate": null,
          "created": 2020-01-01T07:00:00.000Z,
          "displayName": null,
          "events": Array [
            Object {
              "date": 2020-01-01T07:00:00.000Z,
              "name": "identity_created",
              "payload": Object {
                "address": null,
                "birthDate": null,
                "displayName": null,
                "familyName": null,
                "gender": null,
                "givenName": null,
                "gravatar": null,
                "locale": null,
                "middleName": null,
                "nickname": null,
                "phoneNumber": null,
                "phoneNumberVerified": false,
                "picture": null,
                "preferredUsername": null,
                "profile": null,
                "username": "exists",
                "website": null,
                "zoneInfo": null,
              },
            },
          ],
          "familyName": null,
          "gender": null,
          "givenName": null,
          "gravatar": null,
          "id": "e908c4fd-a0b2-4804-ba42-bef787490681",
          "locale": null,
          "middleName": null,
          "nickname": null,
          "phoneNumber": null,
          "phoneNumberVerified": false,
          "picture": null,
          "preferredUsername": null,
          "profile": null,
          "updated": 2020-01-01T07:00:00.000Z,
          "username": "exists",
          "version": 0,
          "website": null,
          "zoneInfo": null,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;
